[tool.poetry]
name = "test-project"
version = "0.1.0"
description = "A test project to reproduce Renovate behavior with vulnerable dependencies."
authors = ["Test User <test@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jinja2 = "<3.1.4"  # Version constraint to include a vulnerable version

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
